last changes before releasing 0.6.3 many bugfixes see changelog for details

--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -30,6 +30,7 @@ male = Männlich
 members = Mitglieder
 myaccount = Mein Profil
 newpass = Neues Passwort
+none = Niemanden
 oldpass = Altes Passwort
 password = Passwort
 phone = Telefon
@@ -54,6 +55,7 @@ zip = Postleitzahl
 access = Zugriff
 addproject = Projekt hinzufügen
 assignto = Zuweisen an
+budget = Budget
 closedprojects = Erledigte Projekte
 deassign = Abziehen
 description = Beschreibung
@@ -177,7 +179,9 @@ folderwasdeleted = Ordner wurde gelöscht
 folderwasedited = Ordner wurde bearbeitet
 managefolders = Ordner verwalten
 maxsize = Maximale Dateigröße
+parent = Elternordner
 rootdir = Stammordner
+visibility = Sichtbar für
 advancedsearch = Erweiterte Suchoptionen
 didyoumean = Meinten sie
 gosearch = Suchen
@@ -190,19 +194,19 @@ search = Suche
 searchfor = Suche nach
 searching = Suche...
 searchitem = Suchbegriff
+al = Albanisch
 ar = Arabisch
 bg = Bulgarisch
 ca = Katalanisch
-zh = Chinesisch
 cs = Tschechisch
 da = Dänisch
 de = Deutsch
 el = Griechisch
 en = Englisch
 es = Spanisch
-gl = Galizisch
 fi = Finnisch
 fr = Französisch
+gl = Galizisch
 hu = Ungarisch
 it = Italienisch
 ja = Japanisch
@@ -213,12 +217,13 @@ pl = Polnisch
 pt = Portugiesisch
 pt_br = Portugiesisch (Brasilien)
 ro = Rumänisch
-sr = Serbisch
 ru = Russisch
 se = Schwedisch
 sk = Slovakisch
+sr = Serbisch
 tr = Türkisch
 uk = Ukrainisch
+zh = Chinesisch
 calendar = Kalender
 dateformat = Datumsformat
 timezone = Zeitzone
@@ -326,6 +331,7 @@ edited = bearbeitet
 excelexport = Excel
 export = Export
 favicon = Favoriten-Icon
+general = Allgemein
 help = Hilfe
 icalexport = iCal
 import = Basecamp-Import
