--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -43,7 +43,7 @@ url = URL
 user = User
 useradministration = User administration
 userprofile = User profile
-usersonline = User online
+usersonline = Online
 userwasadded = User was added
 userwasassigned = User was assigned
 userwasdeassigned = User was deassigned
@@ -222,33 +222,32 @@ al = Albanian
 ar = Arabic
 bg = Bulgarian
 ca = Catalan
-cn = Chinese
-cz = Czech
+cs = Czech
 da = Danish
 de = German
-gr = Greek
+el = Greek
 en = English
 es = Spanish
-es_gl = Galician
 fi = Finnish
 fr = French
+gl = Galician
 hu = Hungarian
 it = Italian
-jp = Japanese
+ja = Japanese
 lt = Lithuanian
 nl = Dutch
-nor = Norwegian
+nn = Norwegian
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brazilian)
 ro = Romanian
-rs = Serbian
 ru = Russian
 se = Swedish
 sk = Slovak
+sr = Serbian
 tr = Turkish
-ua = Ukranian
-cn = Chinese
+uk = Ukranian
+zh = Chinese
 
 {* Calendar *}
 
