--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -3,12 +3,12 @@ adduser = Ajouter un utilisateur
 admin = Administration
 all = Tous
 avatar = Avatar
-cellphone = Téléphone portable
+cellphone = Tél mobile
 changepassword = Modifier le mot de passe
 chatwith = Chat avec
 city = Ville
 client = Client
-company = Entreprise
+company = Société
 confirmlogout = Se déconnecter ?
 contact = Coordonnées
 country = Pays
@@ -17,7 +17,7 @@ deleteform = Réassigner les tâches de cet utilisateur ?
 deleteuser = Supprimer l'utilisateur
 edituser = Modifier l'utilisateur
 email = Courriel
-female = Féminin
+female = Femme
 firstname = Nom
 gender = Sexe
 lastlogin = Dernière connexion
@@ -26,7 +26,7 @@ login = Entrer
 loginbutton = Connexion
 loginerror = Erreur de connexion.<br />Nom d'utilisateur ou mot de passe incorrect.
 logout = Fermer la session
-male = Masculin
+male = Homme
 members = Utilisateurs
 myaccount = Mon profil
 newpass = Nouveau mot de passe
