--- a/language/cz/lng.conf
+++ b/language/cz/lng.conf
@@ -193,31 +193,31 @@ searchitem = Hledaný výraz
 ar = Arabština
 bg = Bulharština
 ca = Katalánština
-cn = Čínština
-cz = Čeština
+zh = Čínština
+cs = Čeština
 da = Dánština
 de = Němčina
 en = Angličtina
 es = Španělština
-es_gl = Galicijština
+gl = Galicijština
 fi = Finština
 fr = Francouzština
 hu = Maďarština
 it = Italština
-jp = Japonština
+ja = Japonština
 lt = Litevština
 nl = Nizozemština
-nor = Norština
+nn = Norština
 pl = Polština
 pt = Portugalština
 pt_br = Portugalština (Brazílie)
 ro = Rumunština
-rs = Srbština
+sr = Srbština
 ru = Ruština
 se = Švédština
 sk = Slovenština
 tr = Turečtina
-ua = Ukrajinština
+uk = Ukrajinština
 calendar = Kalendář
 dateformat = Formát data
 timezone = Časové pásmo
