Small improvements to Farsi translation

--- a/language/fa/lng.conf
+++ b/language/fa/lng.conf
@@ -97,7 +97,7 @@ edittasklist = ويرايش فهرست وظايف
 latetasks = وظايف به تاخير افتاده
 mytasks = وظايف من
 newtasks = وظايف جديد
-notasklists = ليست وظائفي يافت نشد.<br />لطفا <a href = "javascript:blindtoggle('addlist');">يك ليست ايجاد كنيد</a>.
+notasklists = ليست وظائفي يافت نشد.<br />لطفا يك ليست ايجاد كنيد.
 notasks = وظيفه معوقه‌اي موجود نيست
 openprogress = در حال بازكردن
 status = وضعيت
@@ -164,14 +164,14 @@ mailmethod = نوع اي-ميل
 mailserver = سرور اي-ميل
 mailusername = نام كاربري SMTP
 mailpass = رمز عيور SMTP
-profileaddedsubject = Collabtive - پروفايل كاربري جديد شما
+profileaddedsubject = پيغام از طرف Collabtive: پروفايل كاربري جديد شما
 profileaddedtext = يك پروفايل كاربري جديد براي شما ايجاد شد.
 profilepass = رمز عبور
 profileusername = نام كاربري
 projectassignedsubject = پيغام از طرف Collabtive: پروژه منصوب شد
-projectassignedtext = سلام,<br />پروژه جديدي به شما منصوب شد:
+projectassignedtext = سلام,<br /><br />پروژه جديدي به شما منصوب شد:
 taskassignedsubject = پيغام از طرف Collabtive: وظيفه منصوب شد
-taskassignedtext = سلام,<br />وظيفه جديدي به شما منصوب شد:
+taskassignedtext = سلام,<br /><br />وظيفه جديدي به شما منصوب شد:
 
 {* Files *}
 
