Portuguese language file completed, thanks to Pedro Marques

--- a/language/pt/lng.conf
+++ b/language/pt/lng.conf
@@ -5,7 +5,7 @@ all = Todos
 avatar = Avatar
 cellphone = Telemóvel
 changepassword = Alterar password
-chatwith = Conversar com
+chatwith = Iniciar conversa com
 city = Localidade
 client = Cliente
 company = Empresa
@@ -85,7 +85,7 @@ edittasklist = Editar checklist
 latetasks = Tarefas atrasadas
 mytasks = Minhas tarefas
 newtasks = Novas tarefas
-notasklists =
+notasklists = Lista de tarefas pendentes
 notasks = Nenhuma tarefa pendente
 openprogress = Aberto
 status = Status
@@ -106,7 +106,7 @@ taskwasdeleted = Tarefa removida
 taskwasedited = Tarefa editada
 taskwasopened = Tarefa aberta
 text = Texto
-todaytasks = Tarefas de Hoje
+todaytasks = Tarefas do dia
 addmilestone = Adicionar meta
 donemilestones = Metas atingidas
 due = Data
@@ -130,8 +130,8 @@ messages = Mensagens
 messagewasadded = Mensagem adicionada
 messagewasdeleted = Mensagem removida
 messagewasedited = Mensagem editada
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = Nova mensagem
+messagewasaddedtext = Mensagem:
 mymessages = Minhas Mensagens
 replies = Respostas
 reply = Responder
@@ -145,15 +145,15 @@ mailmethod = Método
 mailserver = Servidor
 mailusername = Username
 mailpass = Password
-profileaddedsubject =
-profileaddedtext =
+profileaddedsubject = Foi-lhe criado um novo Perfil
+profileaddedtext = Os dados do seu perfil sao: 
 profilepass = Password
 profileusername = Nome de Utilizador
-hello = 
-projectassignedsubject =
-projectassignedtext =
-taskassignedsubject =
-taskassignedtext =
+hello = Olá
+projectassignedsubject = Foi adicionado a um novo Projecto
+projectassignedtext = Para aceder ao seu novo projecto clique no seguinte link: 
+taskassignedsubject = Foi criada uma nova tarefa para si
+taskassignedtext = Foi-lhe associada uma nova tarefa. Para a visualizar clique em: 
 addfile = Adicionar ficheiro
 addfiles = Adicionar ficheiros
 addfolder = Adicionar pasta
@@ -166,8 +166,8 @@ editfile = Editar ficheiro
 editfolder = Editar pasta
 file = Ficheiro
 files = Ficheiros
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = Novo ficheiro criado
+filecreatedtext = Novo ficheiro criado: 
 filewasadded = Ficheiro adicionado
 filewasdeleted = Ficheiro removido
 filewasedited = Ficheiro editado
@@ -179,7 +179,7 @@ managefolders = Gerir pastas
 maxsize = Tamanho máximo
 rootdir = Directório Principal
 advancedsearch = Pesquisa avançada
-didyoumean = Pretendeu dizer
+didyoumean = Pretendia dizer
 gosearch = Pesquisar
 newsearch = Nova pesquisa
 noresults = Não obteve resultados.
@@ -207,7 +207,7 @@ it = Italiano
 ja = Japonês
 lt = Lituano
 nl = Holandês
-nn =
+nn = nn_text
 pl = Polonês
 pt = Português
 pt_br = Português (Brasil)
@@ -296,10 +296,10 @@ editrole = Editar papel
 permissionread = Ler
 permissions = Permissões
 permissionswereedited = Permissões alteradas
-role = Papel
-roleadded = 
-roleedited = 
-roles = Papeles
+role = Perfil
+roleadded = Perfil adicionado
+roleedited = Perfil actualizado
+roles = Perfis
 active = Activo
 activity = Actividades
 action = Acção
@@ -311,7 +311,7 @@ assigned = assignado
 attachbutton = Anexar ficheiro
 by = Por
 cancel = Cancelar
-chat = 
+chat = Chat
 chooseone = Escolher
 close = Fechar
 closed = Fechado
@@ -347,7 +347,7 @@ rssuser = Nome de utilizador RSS
 send = Enviar
 settings = Configurações
 settingschanged = Configurações alteradas
-settingsedited = Configurações alteradas
+settingsedited = Configurações actualizadas
 showall = Mostrar tudo
 subtitle = Legenda
 systemadministration = Administração do Sistema
@@ -358,3 +358,6 @@ was = foi
 were = foram
 yes = Sim
 zipexport = ZIP
+budget = Orçamento
+visibility = Visivel para
+notify = Notificar
