Czech language file completed, thanks to Vítězslav Mergl

--- a/language/cs/lng.conf
+++ b/language/cs/lng.conf
@@ -30,6 +30,7 @@ male = Muž
 members = Lidé
 myaccount = Můj účet
 newpass = Nové heslo
+none = žádný
 oldpass = Původní heslo
 password = Heslo
 phone = Telefon
@@ -54,6 +55,7 @@ zip = Poštovní směrovací číslo
 access = Přístup
 addproject = Přidat projekt
 assignto = Přiřadit
+budget = Rozpočet
 closedprojects = Uzavřené projekty
 deassign = Zrušit přiřazení
 description = Popis
@@ -178,6 +180,8 @@ folderwasedited = Složka byla upravena
 managefolders = Spravovat složky
 maxsize = Maximální velikost
 rootdir = Kořenový adresář
+visibility = Viditelný pro
+parent = Nadřazený adresář
 advancedsearch = Rozšířené hledání
 didyoumean = Mysleli jste
 gosearch = Hledej
@@ -190,6 +194,7 @@ search = Hledat
 searchfor = Hledat
 searching = Hledám...
 searchitem = Hledaný výraz
+al = Albánština
 ar = Arabština
 bg = Bulharština
 ca = Katalánština
@@ -197,6 +202,7 @@ zh = Čínština
 cs = Čeština
 da = Dánština
 de = Němčina
+el = Řečtina
 en = Angličtina
 es = Španělština
 gl = Galicijština
@@ -271,7 +277,9 @@ iswritable = je zapisovatelný
 makedirwritable = Prosím umožněte zapisování do této složky
 makefilewritable = Prosím umožněte zapisování do tohoto souboru.
 phpversion = Collabtive vyžaduje přinejmenším PHP vez 5.1
-proceedtologin = Tudy k přilášovací stránce.
+proceedtologin = Pokračovat na přilášovací stránku.
+mb_string_enabled = mb_string rozšíření načteno
+enable_mb_string = Prosím povolte mb_string rozšíření
 comment = Komentář
 edittimetracker = Upravit Timetracker
 endafterstart = Konečný čas musí následovat až po počátečním čase.
@@ -281,6 +289,7 @@ filterreport = Filtrovat zprávu
 hours = Hodiny
 inserttime = Vložte aktuální čas
 noassociatedtask = Nebyl připojen žádný úkol
+report = Zpráva
 reporting = Zprávy
 started = zahájen/a
 totalhours = Celkem hodin
@@ -325,12 +334,14 @@ edited = upraven/a
 excelexport = Excel
 export = Exportovat
 favicon = Favicon
+general = Hlavní
 help = Nápověda
 icalexport = iCal
 import = Importovat Basecamp
 importsuccess = Import úspěšný
 inactive = Neaktivní
 no = Ne
+notify = Upozornění
 objoff = vypnuto
 objon = zapnuto
 on = Vytvořen/a
@@ -350,6 +361,7 @@ settingschanged = Nastavení bylo změněno
 settingsedited = Nastavení bylo upraveno
 showall = Ukázat vše
 subtitle = Podtitulek
+started = Zahájení
 systemadministration = Systémová nastavení
 systemdefault = Výchozí nastavení systému
 systemsounds = Zkuky systému
