Spanish language file completed, thanks to Gustavo Queipo de LLano

--- a/language/es/lng.conf
+++ b/language/es/lng.conf
@@ -1,127 +1,129 @@
 address = Dirección
 adduser = Añadir Usuario
-admin = Administrador
+admin = Admin
 all = Todos
 avatar = Avatar
-cellphone = Teléfono celular
+cellphone = Móvil
 changepassword = Cambiar contraseña
 chatwith = Chat con
 city = Ciudad
 client = Cliente
 company = Empresa
-confirmlogout = ¿Cerrar sesión?
+confirmlogout = ¿Terminar la sesión?
 contact = Contacto
 country = País
-deassignuser = Designar usuario
-deleteform = Borrar formulario
-deleteuser = Borrar usuario
+deassignuser = Quitar usuario
+deleteform = ¿Reasignar las tareas de este usuario?
+deleteuser = Eliminar usuario
 edituser = Editar usuario
 email = Correo electrónico
-female = Femenino
-firstname = Primer nombre
+female = Mujer
+firstname = Nombre
 gender = Sexo
 lastlogin = Último acceso
 locale = Idioma
-login = Iniciar sesión
-loginbutton = Ingresar
-loginerror = Los datos que nos ha proporcionado no son correctos,<br /> por favor compruébelos e inténtelo de nuevo.
-logout = Cerrar sesión
-male = Masculino
-members = Miembros
+login = Entrar
+loginbutton = Entrar
+loginerror = No ha sido posible inciar la sesión.<br />Por favor, comprueba tus datos de acceso.
+logout = Salir
+male = Hombre
+members = Gente
 myaccount = Mi cuenta
-newpass = Nueva contraseña
-oldpass = Contraseña actual
+newpass = Contraseña nueva
+none = None
+oldpass = Contraseña antigua
 password = Contraseña
 phone = Teléfono
-rate = Tarifa horaria
+rate = Salario (h)
 repeatpass = Repetir contraseña
-state = Estado
-stayloggedin = Mantenerse conectado
+state = Provincia
+stayloggedin = Permanecer conectado
 template = Plantilla
 url = URL
 user = Usuario
 useradministration = Administrar usuarios
 userprofile = Perfil de usuario
-usersonline = Usuarios en línea
+usersonline = Usuarios conectados
 userwasadded = Usuario añadido
 userwasassigned = Usuario asignado
-userwasdeassigned = Usuario designado
+userwasdeassigned = Usuario quitado
 userwasdeleted = Usuario eliminado
 userwasedited = Usuario editado
-vcardexport = Exportar vCard
-welcomeback = Bienvenida
+vcardexport = vCard
+welcomeback = Bienvenido
 zip = Código postal
 access = Acceso
 addproject = Añadir proyecto
 assignto = Asignar a
-closedprojects = Proyectos completados
-deassign = Designar
+budget = Presupuesto
+closedprojects = Proyectos cerrados
+deassign = Quitar
 description = Descripción
 editproject = Editar proyecto
 myprojects = Mis proyectos
 name = Nombre
-noprojects = No se ha encontrado ningún proyecto
-openprojects = Proyectos activos
+noprojects = No se encontraron proyectos.
+openprojects = Proyectos abiertos
 project = Proyecto
 projects = Proyectos
-projectadministration = Administrar proyectos
+projectadministration = Administración de proyectos
 projectname = Nombre del proyecto
 projectwasadded = Proyecto añadido
-projectwasclosed = Proyecto completado
+projectwasclosed = Proyecto cerrado
 projectwasdeleted = Proyecto eliminado
 projectwasedited = Proyecto editado
-projectwasopened = Proyecto comenzado
+projectwasopened = Proyecto abierto
 report = Informe
 start = Inicio
 addtask = Añadir tarea
 addtasklist = Añadir lista de tareas
 assign = Asignar
 deletetasks = Borrar tareas
-done = Realizado
-donetasklists = Lista de tareas realizadas
-donetasks = Tareas realizadas
+done = Hecho
+donetasklists = Listas de tareas completadas
+donetasks = Tareas completadas
 edittask = Editar tarea
-edittasklist = Editar la lista de tareas
-latetasks = Tareas retrasadas
+edittasklist = Editar lista de tareas
+latetasks = Tareas fuera de plazo
 mytasks = Mis tareas
 newtasks = Tareas nuevas
-notasklists =
+notasklists = No se han encontrado listas de tareas.
 notasks = No hay tareas pendientes
 openprogress = Abierto
 status = Estado
 task = Tarea
-tasklist = Lista de tarea
+tasklist = Lista de tareas
 tasklists = Listas de tareas
-tasklistwasadded = Lista de tareas añadidas
-tasklistwasclosed = Lista de tareas cerradas
-tasklistwasdeleted = Lista de tareas borradas
-tasklistwasedited = Lista de tareas editadas
-tasklistwasopened = Lista de tareas abiertas
+tasklistwasadded = Lista de tareas añadida
+tasklistwasclosed = Lista de tareas cerrada
+tasklistwasdeleted = Lista de tareas eliminada
+tasklistwasedited = Lista de tareas editada
+tasklistwasopened = Lista de tareas abierta
 tasks = Tareas
 taskwasadded = Tarea añadida
 taskwasassigned = Tarea asignada
 taskwasclosed = Tarea cerrada
-taskwasdeassigned = Tarea designada
-taskwasdeleted = Tarea borrada
+taskwasdeassigned = Tarea quitada
+taskwasdeleted = Tarea eliminada
 taskwasedited = Tarea editada
 taskwasopened = Tarea abierta
 text = Texto
 todaytasks = Tareas para hoy
-addmilestone = Añadir plazo
-donemilestones = Plazos completados
-due = Vence
-editmilestone = Editar plazo
-end = Final
-latestones = Plazos retrasados
-milestone = Plazo
-milestones = Plazos
-milestonewasadded = Plazo añadido
-milestonewasclosed = Plazo cerrado
-milestonewasdeleted = Plazo eliminado
-milestonewasedited = Plazo editado
-milestonewasopened = Plazo abierto
-newmilestones = Nuevos Plazos
-todaystones = Plazos que vencen hoy
+addmilestone = Añadir hito
+donemilestones = Hitos alcanzados
+due = Vencimiento
+editmilestone = Editar hito
+end = Fin
+latestones = Hitos fuera de plazo
+milestone = Hito
+milestones = Hitos
+milestonewasadded = Hito añadido
+milestonewasclosed = Hito cerrado
+milestonewasdeleted = Hito eliminado
+milestonewasedited = Hito editado
+milestonewasopened = Hito abierto
+newmilestones = Hitos nuevos
+todaystones = Hitos para hoy
 addmessage = Añadir mensaje
 answer = Responder
 editmessage = Editar mensaje
@@ -130,99 +132,103 @@ messages = Mensajes
 messagewasadded = Mensaje añadido
 messagewasdeleted = Mensaje eliminado
 messagewasedited = Mensaje editado
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = Notificación de Collabtive – Mensaje añadido
+messagewasaddedtext = El mensaje siguiente ha sido añadido:
 mymessages = Mis mensajes
 replies = Respuestas
 reply = Respuesta
 replywasadded = Respuesta añadida
-replywasdeleted = Respuesta borrada
+replywasdeleted = Respuesta eliminada
 replywasedited = Respuesta editada
-title = Titulo
-mailfrommail = Correo electrónico del emisor
-mailfromname = Nombre del emisor
+title = Título
+mailfrommail = E-mail del remitente
+mailfromname = Nombre del remitente
 mailmethod = Método
 mailserver = Servidor
 mailusername = Nombre de usuario SMTP
 mailpass = Contraseña SMTP
-profileaddedsubject = Notificación de Collabtive – Perfil de usuario añadido
-profileaddedtext =
-profilepass = Password
+profileaddedsubject = Notificación de Collabtive – Perfil de usuario creado
+profileaddedtext = Se ha creado un perfil de usuario nuevo para tí en el sitio siguiente. Por razones de seguridad, no olvides cambiar la contraseña.
+profilepass = Contraseña
 profileusername = Nombre de usuario
-hello = 
+hello = Hola
 projectassignedsubject = Notificación de Collabtive – Proyecto asignado
-projectassignedtext =
+projectassignedtext = Se te ha asignado un nuevo proyecto:
 taskassignedsubject = Notificación de Collabtive – Tarea asignada
-taskassignedtext =
+taskassignedtext = Se te ha asignado una nueva tarea:
 addfile = Añadir archivo
 addfiles = Añadir archivos
-addfolder = Añadir directorio
+addfolder = Añadir carpeta
 attachfile = Adjuntar archivo
 attachfiles = Adjuntar archivos
 count = Número de archivos
-directories = Carpetas
-directory = Carpeta
+directories = Directorios
+directory = Directorios
 editfile = Editar archivo
 editfolder = Editar carpeta
 file = Archivo
 files = Archivos
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = Notificación de Collabtive – Archivo añadido
+filecreatedtext = Se ha añadido un archivo a uno de tus proyectos.
 filewasadded = Archivo añadido
 filewasdeleted = Archivo eliminado
 filewasedited = Archivo editado
 folder = Carpeta
 folderwasadded = Carpeta añadida
-folderwasdeleted = Carpeta borrada
+folderwasdeleted = Carpeta eliminada
 folderwasedited = Carpeta editada
 managefolders = Gestionar carpetas
 maxsize = Tamaño máximo
-rootdir = Carpeta raíz
+parent = Carpeta padre
+rootdir = Directorio raíz
+visibility = Visible para
 advancedsearch = Búsqueda avanzada
-didyoumean = Quizás quisiste decir
+didyoumean = Querías decir
 gosearch = Buscar
-newsearch = Búsqueda nueva
-noresults = La búsqueda que usted ha realizado no ha devuelto ningún resultado.
-refinesearch = Redefinir la búsqueda
-results = Resultado
+newsearch = Nueva búsqueda
+noresults = La búsqueda no produjo ningún resultado.
+refinesearch = Refinar la búsqueda
+results = Resultados
 resultsfor = Resultados para
 search = Buscar
-searchfor = Buscar por
+searchfor = Buscar
 searching = Buscando...
-searchitem = Buscar objeto
-ar = Arabe
+searchitem = Buscar elemento
+al = Albanés
+ar = Árabe
 bg = Búlgaro
 ca = Catalán
-zh = Chino
 cs = Checo
 da = Danés
 de = Alemán
+el = Griego
 en = Inglés
 es = Español
-gl = Gallego
-fi = Finés
+fi = Finlandés
 fr = Francés
-hu = Húngara
+gl = Gallego
+hu = Húngaro
 it = Italiano
 ja = Japonés
 lt = Lituano
-nl = Neerlandés
-nn =
+nl = Holandés
+nn = Noruego
 pl = Polaco
 pt = Portugués
-pt_br = Portugués (Brasil)
+pt_br = Portugués (Brasileño)
 ro = Rumano
-sr = Serbio
 ru = Ruso
 se = Sueco
 sk = Eslovaco
+sr = Serbio
 tr = Turco
 uk = Ucraniano
+zh = Chino
 calendar = Calendario
 dateformat = Formato de fecha
 timezone = Zona horaria
 prevmonth = Mes anterior
-nextmonth = Próximo mes
+nextmonth = Mes siguiente
 monday = Lu
 tuesday = Ma
 wednesday = Mi
@@ -243,63 +249,66 @@ october = Octubre
 november = Noviembre
 december = Diciembre
 accessdenied = Acceso denegado
-confirmdel = ¿Está seguro de que desea borrar este objeto?\nUna vez eliminado no se puede deshacer.
+confirmdel = ¿Estás seguro de querer borrar este elemento?\nUna vez eliminado no se podrá recuperar.
 error = Error
-goback = Por favor regrese y corrija el error.
-nopermission = Permiso insuficiente
-notyourproject = No puede acceder a este proyecto ya que usted no está incluido en él.
-wrongfield = Por favor introduzca un valor valido para \"%FIELDNAME%\"
-wrongfields = Por favor introduzca valores validos para:\n\n
-wrongselect = Por favor seleccione un valor valido para \"%FIELDNAME%\"
-createadmin = Debe crear el primer usuario. Este usuario tendrá permisos de administrador y no podrá ser eliminado.
-clickcontinue = Pulse en "Continuar" para finalizar la instalación.
+goback = Vuelve atrás y corrije el error, por favor.
+nopermission = Permiso denegado
+notyourproject = No estás asignado a este proyecto.
+wrongfield = Introduce un valor válido para \"%FIELDNAME%\", por favor.
+wrongfields = Por favor, introduce valores validos para:\n\n
+wrongselect = Seleccione un valor valido para \"%FIELDNAME%\, por favor."
+createadmin = Crea el primer usuario. Este usuario será el administrador y no se podrá eliminar.
+clickcontinue = Haz click en "Continuar" para continuar con la instalación.
 continue = Continuar
-correctfaults = Por favor corrija los errores para poder continuar.
+correctfaults = Corrija los errores, por favor.
 db = Base de datos
-dbhost = Servidor de base de datos
+dbhost = Servidor de la base de datos
 dbname = Nombre de la base de datos
 dbpass = Contraseña de la base de datos
 dbuser = Usuario de la base de datos
-insertdbaccessdata = Por favor introduzca los datos de acceso a la base de datos.
-installcollabtive = Instalación - Collabtive
-installerchecksconditions = La instalación está comprobando que cumpla todos los requisitos.
-installerconditions = Requisitos de la instalación
-installerlanguage = Idioma de la instalación
+insertdbaccessdata = Por favor, introduce aquí los datos de acceso a la base de datos.
+installcollabtive = Instalar Collabtive
+installerchecksconditions = El instalador comprobará a continuación que se cumplen todos los requisitos para la instalación.
+installerconditions = Requisitos para la instalación
+installerlanguage = Idioma para la instalación
 installstep = Paso
-installsuccess = La instalación se completó correctamente.
+installsuccess = La instalación se realizó correctamente.
 iswritable = tiene permisos de escritura
-makedirwritable = Por favor asigne permisos de escritura a la carpeta
-makefilewritable = Por favor asigne permisos de escritura al archivo
-phpversion = Para que Collabtive funcione correctamente se necesita PHP 5.1 o superior
-proceedtologin = Acceder a la página para iniciar sesión
+makedirwritable = Por favor, asigne permiso de escritura al directorio
+makefilewritable = Por favor, asigne permiso de escritura al archivo
+phpversion = Se necesita PHP 5.1 o superior para ejecutar Collabtive.
+proceedtologin = Continuar a la página de acceso
+mb_string_enabled = Extensión mb_string cargada
+enable_mb_string = Activa la extensión mb_string, por favor
 comment = Comentario
-edittimetracker = Editar control de tiempo
-endafterstart = La hora de finalización debe ser superior a la hora de comienzo.
+edittimetracker = Editar entrada en el registro de actividad
+endafterstart = La hora de finalización debe ser posterior a la hora de comienzo.
 ended = Finalizado
 filter = Filtrar
-filterreport = Filtrar el informe
+filterreport = Filtrar informe
 hours = Horas
-inserttime = Introduzca el tiempo actual
-noassociatedtask = Ninguna tarea asociada
-reporting = Informando
+inserttime = Insertar la hora actual
+noassociatedtask = Sin tarea asociada
+report = Informe
+reporting = Informe
 started = Comenzado
-totalhours = Total de horas
+totalhours = Horas totales
 timetable = Horario
-timetracker = Control de tiempo
-timetrackeradded = Tiempo añadido
+timetracker = Registro de actividad
+timetrackeradded = Tiempo registrado
 add = Añadir
-addrole = Añadir papel
-delete = Borrar
-delrole = Borrar papel
+addrole = Añadir rol
+delete = Eliminar
+delrole = Eliminar rol
 edit = Editar
-editrole = Editar papel
+editrole = Editar rol
 permissionread = Leer
-permissions = Autorizaciones
-permissionswereedited = Autorizaciones editadas
-role = Papel
-roleadded = La regla se ha añadido
-roleedited = La regla se ha editado
-roles = Papeles
+permissions = Permisos
+permissionswereedited = Permisos modificados
+role = Rol
+roleadded = Rol añadido
+roleedited = Rol editado
+roles = Roles
 active = Activo
 activity = Actividad
 action = Acción
@@ -312,46 +321,49 @@ attachbutton = Adjuntar
 by = Por
 cancel = Cancelar
 chat = Chat
-chooseone = Por favor seleccione
+chooseone = Por favor, elige
 close = Cerrar
 closed = cerrado
 day = Día
-dayslate = Días de Retraso
-daysleft = Días para finalizar
-deassigned = designado
+dayslate = Días de retraso
+daysleft = Días restantes
+deassigned = quitado
 deleted = eliminado
 desktop = Escritorio
 edited = editado
 excelexport = Excel
 export = Exportar
-favicon = Icono
+favicon = Favicon
+general = General
 help = Ayuda
 icalexport = iCal
-import = Importar proyectos de Basecamp
-importsuccess = Archivo importado correctamente
+import = Importar de Basecamp
+importsuccess = Importación realizada correctamente
 inactive = Inactivo
 no = No
-objoff = Desactivado
-objon = Activado
+notify = Notificar
+objoff = Inactivo
+objon = Activo
 on = Creado
 or = o
 open = Abrir
 opened = Abierto
-overview = Tablero
+overview = Vista general
 pdfexport = PDF
 private = Privado
 public = Publico
 rssfeed = RSS
-rsspass = Password RSS
+rsspass = Contraseña RSS
 rssuser = Nombre de usuario RSS
 send = Enviar
 settings = Configuración
-settingschanged = Configuración cambiada
-settingsedited = Configuración cambiada
+settingschanged = Se modificó la configuración
+settingsedited = Se editó la configuración
 showall = Mostrar todo
-subtitle = Subtitulo
-systemadministration = Configuración de sistema
-systemdefault = Defecto
+started = Comenzado
+subtitle = Subtítulo
+systemadministration = Administración del sistema
+systemdefault = Por defecto
 systemsounds = Sonidos de sistema
 tags = Etiquetas
 was = fue
