--- a/language/pl/lng.conf
+++ b/language/pl/lng.conf
@@ -30,6 +30,7 @@ male = Mężczyzna
 members = Użytkownicy
 myaccount = Moje konto
 newpass = Nowe hasło
+none = Nikt
 oldpass = Stare hasło
 password = Hasło
 phone = Telefon
@@ -51,9 +52,13 @@ userwasedited = Dane użytkownika zostały zmienione
 vcardexport = vCard
 welcomeback = Zapraszamy ponownie
 zip = Kod pocztowy
+
+{* Project *}
+
 access = Dostęp
 addproject = Nowy projekt
 assignto = Przypisz do
+budget = Budżet
 closedprojects = Zamknięte projekty
 deassign = Wypisz
 description = Opis
@@ -73,6 +78,9 @@ projectwasedited = Projekt został zmieniony
 projectwasopened = Rozpocząłeś projekt
 report = Raport
 start = Start
+
+{* Task / Tasklist *}
+
 addtask = Nowe zadanie
 addtasklist = Nowa lista zadań
 assign = Przypisz
@@ -85,7 +93,7 @@ edittasklist = Edytuj listę zadań
 latetasks = Spóźnione zadania
 mytasks = Moje zadania
 newtasks = Nowe zadania
-notasklists =
+notasklists = Nie znaleziono listy zadań. Proszę utworzyć listę.
 notasks = Nie masz oczekujących zadań
 openprogress = Otwórz
 status = Status
@@ -107,6 +115,9 @@ taskwasedited = Zadanie zostało zmienione
 taskwasopened = Zadanie zostało otworzone
 text = Tekst
 todaytasks = Zadania na dzisiaj
+
+{* Milestone *}
+
 addmilestone = Dodaj kamień milowy
 donemilestones = Osiągnięte kamienie milowe
 due = Do zrobienia
@@ -122,6 +133,9 @@ milestonewasedited = Kamień milowy został zmieniony
 milestonewasopened = Czas utworzenia kamienia milowego
 newmilestones = Nowe kamienie milowe
 todaystones = Kamienie na dzisiaj
+
+{* Messages *}
+
 addmessage = Nowa wiadomość
 answer = Odpowiedź
 editmessage = Edytuj wiadomość
@@ -130,8 +144,8 @@ messages = Wiadomości
 messagewasadded = Wiadomość została dodana
 messagewasdeleted = Wiadomość została usunięta
 messagewasedited = Wiadomość została zmieniona
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = Powiadomienie Collabtive: Dodano wiadomość
+messagewasaddedtext = następujące wiadomości zostały dodane:
 mymessages = Moje wiadomości
 replies = Odpowiedzi
 reply = Odpowiedź
@@ -139,6 +153,9 @@ replywasadded = Odpowiedź została dodana
 replywasdeleted = Odpowiedź została usunięta
 replywasedited = Odpowiedź została zmieniona
 title = Tytuł
+
+{* eMails *}
+
 mailfrommail = Nadawca
 mailfromname = Imię nadawcy
 mailmethod = Metoda
@@ -154,6 +171,9 @@ projectassignedsubject = Powiadomienie Collabtive – przydzielono ci projekt
 projectassignedtext = masz przydzielone nowe projekt:
 taskassignedsubject = Powiadomienie Collabtive – przydzielono ci zadanie
 taskassignedtext = masz przydzielone nowe zadanie:
+
+{* Files *}
+
 addfile = Dodaj plik
 addfiles = Dodaj pliki
 addfolder = Dodaj folder
@@ -166,8 +186,8 @@ editfile = Zmień plik
 editfolder = Zmień katalog
 file = Plik
 files = Pliki
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = Collabtive powiadomienie - Plik dodany
+filecreatedtext = plik został dodany do jednego z twoich projektów.
 filewasadded = Plik został dodany
 filewasdeleted = Plik został usunięty
 filewasedited = Plik został zmieniony
@@ -177,52 +197,65 @@ folderwasdeleted = Folder został usunięty
 folderwasedited = Folder został zmieniony
 managefolders = Zarządzaj folderami
 maxsize = Rozmiar maksymalny
+parent = Katalog nadrzędny
 rootdir = Katalog główny
+visibility = Widoczny dla
+
+{* Search *}
+
 advancedsearch = Wyszukiwanie zaawansowane
 didyoumean = Czy chodziło Ci o
 gosearch = Szukaj!
 newsearch = Nowe wyszukiwanie
 noresults = Twoje wyszukiwanie nie przyniosło rezultatów
-refinesearch = Refine search
+refinesearch = Uściślij wyszukiwanie
 results = Wyniki
 resultsfor = Wyniki dla
 search = Szukaj
 searchfor = Szukaj w
 searching = Szukanie...
-searchitem = Search item
-ar =
-bg =
-ca =
-zh =
-cs =
-da =
-de =
-en =
-es =
-gl =
+searchitem = Szukaj pozycji
+
+{* Languages *}
+
+al = Albański
+ar = Arabski
+bg = Bułgarski
+ca = Kataloński
+cs = Czeski
+da = Duński
+de = Niemiecki
+el = Grecki
+en = Angielski
+es = Hiszpański
 fi = Fiński
-fr =
-hu =
-it =
-ja =
-lt =
-nl =
-nn =
+fr = Francuski
+gl = Galicyjski
+hu = Węgierski
+it = Włoski
+ja = Japoński
+lt = Litewski
+nl = Holenderski
+nn = Norweski
 pl = Polski
-pt =
-pt_br =
-ro =
-sr =
-ru =
-se =
-sk =
-tr =
+pt = Portugalski
+pt_br = Portugalski (Brazylijski)
+ro = Rumuński
+ru = Rosyjski
+se = Szwedzki
+sk = Słowacki
+sr = Serbski
+tr = Turecki
 uk = Ukraiński
+zh = Chiński
+
+{* Calendar *}
+
 calendar = Kalendarz
 dateformat = Format daty
 timezone = Strefa czasowa
 prevmonth = następny miesiąc
-nextmonth = poprzedni miesiąć
+nextmonth = poprzedni miesiąc
 monday = Pn
 tuesday = Wt
 wednesday = Śr
@@ -242,8 +275,11 @@ september = Wrzesień
 october = Październik
 november = Listopad
 december = Grudzień
+
+{* Errors *}
+
 accessdenied = Dostęp zabroniony
-confirmdel =
+confirmdel = Na pewno chcesz usunąć tą pozycję?\nUsunięcie nie będzie mogło być cofnięte.
 error = Błąd
 goback = Proszę wrócić i poprawić błąd
 nopermission = Brak uprawnień
@@ -251,6 +287,9 @@ notyourproject = Nie zostałeś przypisany do tego projektu. Brak uprawnień
 wrongfield = Proszę wprowadzić poprawne wartości dla \"%FIELDNAME%\"
 wrongfields = Proszę wprowadzić poprawne wartości dla:\n\n
 wrongselect = Proszę wybrać poprawną wartość w \"%FIELDNAME%\"
+
+{* Installation *}
+
 createadmin = Utwórz pierwszego użytkownika o możliwościach administratora (nie będzie on mógł być usunięty).
 clickcontinue = Naciśnij "kontynuuj" żeby rozpocząć instalacje.
 continue = Kontynuuj
@@ -271,7 +310,12 @@ iswritable = jest zapisywalny
 makedirwritable = Proszę utworzyć katalog do zapisu.
 makefilewritable = Proszę utworzyć plik do zapisu.
 phpversion = Collabtive potrzebuje do uruchomienia co najmniej PHP w wersji 5.1.
-proceedtologin = Loguję się..
+proceedtologin = Loguję się...
+mb_string_enabled = załadowano rozszerzenie mb_string
+enable_mb_string = Prosze włączyć rozszerzenie mb_string
+
+{* Timetracker *}
+
 comment = Komentarz
 edittimetracker = Zmień początek lini czasu
 endafterstart = Data zakończenia musi być pózniejsza od daty startu
@@ -281,12 +325,16 @@ filterreport = Filtruj raport
 hours = Godziny
 inserttime = Wstaw aktualny czas
 noassociatedtask = Brak przyporządkowanych zadań
+report = Raport
 reporting = Raportowanie
 started = Początek
 totalhours = Czas całkowity
 timetable = Harmonogram dla
 timetracker = Raport
 timetrackeradded = Raport został dodany
+
+{* Roles / Permissions *}
+
 add = Dodaj
 addrole = Dodaj rolę
 delete = Usuń
@@ -300,6 +348,9 @@ role = Rola
 roleadded = Rola została dodana
 roleedited = Rola została zedytowana
 roles = Role
+
+{* Miscellaneous *}
+
 active = Aktywny
 activity = Aktywność
 action = Akcja
@@ -325,12 +376,14 @@ edited = edytowany
 excelexport = Excel
 export = Eksport
 favicon = Favicon
+general = Ogólne
 help = Pomoc
 icalexport = iCal
 import = Importuj z Basecamp
 importsuccess = Importowanie pomyślnie zakończone
 inactive = Nieaktywny
-no =
+no = Nie
+notify = Powiadom
 objoff = Bezczynny
 objon = Aktywny
 on = Utworzony
@@ -349,6 +402,7 @@ settings = Ustawienia
 settingschanged = Ustawienia zostały zmienione
 settingsedited = Ustawienia zostały zedytowane
 showall = Pokaż wszystko
+started = Rozpoczęty
 subtitle = Podtytuł
 systemadministration = Ustawienia systemowe
 systemdefault = Domyślny
