Brasilian Portuguese language file improved, thanks to Vinicius from Brasil.

--- a/language/pt_br/lng.conf
+++ b/language/pt_br/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Alterar etapa
 latetasks = Tarefas passadas
 mytasks = Minhas tarefas
 newtasks = Novas tarefas
-notasklists =
+notasklists = Nenhuma atividade encontrada
 notasks = Nenhuma tarefa pendente
 openprogress = Aberto
 status = Status
@@ -109,7 +109,7 @@ text = Texto
 todaytasks = Tarefas de Hoje
 addmilestone = Adicionar marco
 donemilestones = Marcos
-due = Data
+due = Prazo final
 editmilestone = Editar marco
 end = Fim
 latestones = Marcos passados
@@ -122,9 +122,9 @@ milestonewasedited = Marco alterado
 milestonewasopened = Marco aberto
 newmilestones = Novos marcos
 todaystones = Marcos de hoje
-addmessage = Escrever
-answer = Pergunta
-editmessage = Editar
+addmessage = Adicionar mensagem
+answer = Resposta
+editmessage = Editar mensagem
 message = Mensagem
 messages = Mensagens
 messagewasadded = Mensagem adicionada
@@ -149,7 +149,7 @@ profileaddedsubject =
 profileaddedtext =
 profilepass = Senha
 profileusername = Nome
-hello = 
+hello = Olá
 projectassignedsubject =
 projectassignedtext =
 taskassignedsubject =
@@ -159,7 +159,7 @@ addfiles = Adicionar arquivos
 addfolder = Adicionar Pasta
 attachfile = Anexar arquivo
 attachfiles = Anexar arquivos
-count = Contar
+count = Quantidade
 directories = Diretórios
 directory = Diretório
 editfile = Editar arquivo
@@ -172,15 +172,15 @@ filewasadded = Arquivo adicionado
 filewasdeleted = Arquivo removido
 filewasedited = Arquivo alterado
 folder = Pasta
-folderwasadded = Pasta foi Adicionada
-folderwasdeleted = Pasta foi Removida
-folderwasedited = Pasta foi editada
+folderwasadded = Pasta adicionada
+folderwasdeleted = Pasta removida
+folderwasedited = Pasta editada
 managefolders = Gerenciar Pastas
 maxsize = Tamanho máximo
 rootdir = Diretorio Padrão
 advancedsearch = Busca avançada
 didyoumean = Você quis dizer
-gosearch = Ir!
+gosearch = Pesquisar
 newsearch = Nova pesquisa
 noresults = Sua pesquisa não retornou resultados.
 refinesearch = Refinar pesquisa
@@ -273,7 +273,7 @@ makefilewritable = Criar arquivo para escrita
 phpversion = Versão do PHP
 proceedtologin = prossiga com o Login
 comment = Comentário
-edittimetracker = Alterar entrada
+edittimetracker = Editar contador de tempo
 endafterstart = A término deve ser maior que a de início
 ended = Término
 filter = Filtro
@@ -297,9 +297,9 @@ permissionread = Ler
 permissions = Permissões
 permissionswereedited = Permissões alteradas
 role = Papel
-roleadded = 
-roleedited = 
-roles = Papeles
+roleadded = Papel adicionado
+roleedited = Papel editado
+roles = Papéis
 active = Ativo
 activity = Atividade
 action = Ação
@@ -311,7 +311,7 @@ assigned = atribuído
 attachbutton = Botão de anexar
 by = Por
 cancel = Cancelar
-chat = 
+chat = Chat
 chooseone = Escolha
 close = Fechar
 closed = fechado
