French language file completed, thanks to Arnaud Aubert.

--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -48,7 +48,7 @@ userwasassigned = Utilisateur a été assigné
 userwasdeassigned = Utilisateur a été retiré
 userwasdeleted = Utilisateur a été supprimé
 userwasedited = Utilisateur a été modifié
-vcardexport = Export Vcard
+vcardexport = Export vCard
 welcomeback = Bienvenue
 zip = Code Postal
 access = Accès
@@ -85,7 +85,7 @@ edittasklist = Modifier la liste de tâches
 latetasks = Tâches en retard
 mytasks = Mes tâches
 newtasks = Nouvelles tâches
-notasklists =
+notasklists = Aucune liste de tâches trouvée, merci d'en créer une.
 notasks = Il n'y a pas de tâches pour le moment.
 openprogress = En cours
 status = Statut
@@ -130,8 +130,8 @@ messages = Messages
 messagewasadded = Message a été ajouté
 messagewasdeleted = Message a été supprimé
 messagewasedited = Message a été modifié
-messagewasaddedsubject = 
-messagewasaddedtext = 
+messagewasaddedsubject = Information : message ajouté.
+messagewasaddedtext = le message suivanta a été ajouté : 
 mymessages = Mes messages
 replies = Réponses
 reply = Réponse
@@ -145,15 +145,15 @@ mailmethod = Méthode d'envoi
 mailserver = Serveur
 mailusername = Nom d'utilisateur
 mailpass = Mot de passe
-profileaddedsubject =
-profileaddedtext =
+profileaddedsubject = Information : profil utilisateur créé.
+profileaddedtext = Un nouveau profil utilisateur a été créé pour vous, merci de changer votre mot de passe à la première connexion (pour des raisons de sécurité).
 profilepass = Mot de passe
 profileusername = Nom d'utilisateur
-hello = 
-projectassignedsubject =
-projectassignedtext =
-taskassignedsubject =
-taskassignedtext =
+hello = Bonjour
+projectassignedsubject = Information : projet assigné
+projectassignedtext = Un nouveau projet vous a été assigné
+taskassignedsubject = Information : täche assigné
+taskassignedtext = Une nouvelle tâche vous a été assigné : 
 addfile = Ajouter un fichier
 addfiles = Ajouter des fichiers
 addfolder = Ajouter un dossier
@@ -166,8 +166,8 @@ editfile = Modifier le fichier
 editfolder = Editer le dossier
 file = Fichier
 files = Fichiers
-filecreatedsubject = 
-filecreatedtext = 
+filecreatedsubject = Information : fichier ajouté
+filecreatedtext = Un fichier a été ajouté pour un de vos projets
 filewasadded = Fichier a été ajouté
 filewasdeleted = Fichier a été supprimé
 filewasedited = Fichier a été modifié
@@ -207,7 +207,7 @@ it = Italien
 ja = Japonais
 lt = Lituanien
 nl = Néerlandais
-nn =
+nn = Norvégien
 pl = Polonais
 pt = Portugais
 pt_br = Portugais (Brésil)
