French language file completed, thanks to Thibaut.

--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -30,6 +30,7 @@ male = Homme
 members = Utilisateurs
 myaccount = Mon profil
 newpass = Nouveau mot de passe
+none = Personne
 oldpass = Ancien mot de passe
 password = Mot de passe
 phone = Téléphone
@@ -54,6 +55,7 @@ zip = Code Postal
 access = Accès
 addproject = Ajouter un projet
 assignto = Assigné à
+budget = Budget
 closedprojects = Projets terminés
 deassign = Retirer du projet
 description = Description
@@ -177,7 +179,9 @@ folderwasdeleted = Répertoire a été supprimé
 folderwasedited = Répertoire a été modifié
 managefolders = Gérer les répertoires
 maxsize = Taille maximale
+parent = Dossier parent
 rootdir = Répertoire racine
+visibility = Visible pour
 advancedsearch = Recherche avancée
 didyoumean = Vouliez-vous dire
 gosearch = Rechercher !
@@ -325,12 +329,14 @@ edited = modifié
 excelexport = Excel
 export = Export
 favicon = Favicon
+general = General
 help = Aide
 icalexport = iCal
 import = Importer de Basecamp
 importsuccess = L'import s'est effectué correctement
 inactive = Inactif
 no = Non
+notify = Avertir
 objoff = Actif
 objon = Inactif
 on = Le
