Some strings in French translation corrected

--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -133,7 +133,7 @@ messagewasadded = Message a été ajouté
 messagewasdeleted = Message a été supprimé
 messagewasedited = Message a été modifié
 messagewasaddedsubject = Information : message ajouté.
-messagewasaddedtext = le message suivanta a été ajouté : 
+messagewasaddedtext = le message suivant a été ajouté : 
 mymessages = Mes messages
 replies = Réponses
 reply = Réponse
@@ -154,8 +154,8 @@ profileusername = Nom d'utilisateur
 hello = Bonjour
 projectassignedsubject = Information : projet assigné
 projectassignedtext = Un nouveau projet vous a été assigné
-taskassignedsubject = Information : täche assigné
-taskassignedtext = Une nouvelle tâche vous a été assigné : 
+taskassignedsubject = Information : tâche assignée
+> taskassignedtext = Une nouvelle tâche vous a été assignée :
 addfile = Ajouter un fichier
 addfiles = Ajouter des fichiers
 addfolder = Ajouter un dossier
